--- a/profile.html
+++ b/profile.html
@@ -69,7 +69,7 @@
     
     <div class="main-content">
         <div class="container">
-            <h1>dashboard</h1>
+            <h1>edit profile</h1>
         </div>
     </div>
 </body>
