--- a/profile.html
+++ b/profile.html
@@ -42,7 +42,7 @@
                 </a>
                 <span class="tooltip">Data Tracker</span>
             </li>
-            <li>
+            <li class="active">
                 <a href="profile.html">
                     <i class="bx bx-user"></i>
                     <span class="nav-item">Profile</span>
