--- a/tracker.html
+++ b/tracker.html
@@ -35,7 +35,7 @@
                 </a>
                 <span class="tooltip">Dashboard</span>
             </li>
-            <li>
+            <li class="active">
                 <a href="tracker.html">
                     <i class="bx bx-pencil"></i>
                     <span class="nav-item">Data Tracker</span>
