--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
         </div>
         
         <ul>
-            <li>
+            <li class="active">
                 <a href="dashboard.html">
                     <i class="bx bxs-grid-alt"></i>
                     <span class="nav-item">Dashboard</span>
