--- a/dashboard.html
+++ b/dashboard.html
@@ -37,21 +37,21 @@
             </li>
             <li>
                 <a href="tracker.html">
-                    <i class="bx bx-pencil"></i>
+                    <i class="bx bxs-pencil"></i>
                     <span class="nav-item">Data Tracker</span>
                 </a>
                 <span class="tooltip">Data Tracker</span>
             </li>
             <li>
                 <a href="profile.html">
-                    <i class="bx bx-user"></i>
+                    <i class="bx bxs-user"></i>
                     <span class="nav-item">Profile</span>
                 </a>
                 <span class="tooltip">Profile</span>
             </li>
             <li>
                 <a href="login.html">
-                    <i class="bx bx-log-out"></i>
+                    <i class="bx bxs-log-out"></i>
                     <span class="nav-item">Logout</span>
                 </a>
                 <span class="tooltip">Logout</span>
@@ -68,10 +68,58 @@
     </div>
     
     <div class="main-content">
-        <div class="container">
+        <div class="header">
             <h1>dashboard</h1>
         </div>
+        <div class="filter">
+            <div class="monthly">Month</div>
+            <div class="yearly">Yearly</div>
+        </div>
+        <div class="container">
+            <div class="statistics">
+                <div class="total">
+                    <i class="bx bxs-group"></i>
+                    <div class="text">
+                        <p class="bold">Total Patients Tested</p>
+                        <p class="number">890</p>
+                    </div>
+                </div>
+                <div class="positive">
+                    <i class="bx bxs-user-plus"></i>
+                    <div class="text">
+                        <p class="bold">Positive Patients Tested</p>
+                        <p class="number">90</p>
+                    </div>
+                </div>
+                <div class="negative">
+                    <i class="bx bxs-user-minus"></i>
+                    <div class="text">
+                        <p class="bold">Negative Patients Tested</p>
+                        <p class="number">800</p>
+                    </div>
+                </div>
+            </div>
+            <div class="graph1">
+                <p>Testing outcomes by main reason for HIV Test</p>
+            </div>
+            <div class="graph2">
+                <p>Testing outcomes for clients who were tested before (repeat testers)</p>
+            </div>
+            <div class="graph3">
+                <p>Testing outcomes by Key or Vulnerable Population (KVP) at higher risk</p>
+            </div>
+            <div class="graph4">
+                <p>Testing outcomes by age</p>
+            </div>
+            <div class="graph5">
+                <p>Testing outcomes for first time testers</p>
+            </div>
+            <div class="graph6">
+                <p>Linkage for positive clients</p>
+            </div>
+        </div>
     </div>
+    
 </body>
 
 </html>
