--- a/tracker.html
+++ b/tracker.html
@@ -37,21 +37,21 @@
             </li>
             <li class="active">
                 <a href="tracker.html">
-                    <i class="bx bx-pencil"></i>
+                    <i class="bx bxs-pencil"></i>
                     <span class="nav-item">Data Tracker</span>
                 </a>
                 <span class="tooltip">Data Tracker</span>
             </li>
             <li>
                 <a href="profile.html">
-                    <i class="bx bx-user"></i>
+                    <i class="bx bxs-user"></i>
                     <span class="nav-item">Profile</span>
                 </a>
                 <span class="tooltip">Profile</span>
             </li>
             <li>
                 <a href="login.html">
-                    <i class="bx bx-log-out"></i>
+                    <i class="bx bxs-log-out"></i>
                     <span class="nav-item">Logout</span>
                 </a>
                 <span class="tooltip">Logout</span>
@@ -68,8 +68,11 @@
     </div>
     
     <div class="main-content">
-        <div class="container">
+        <div class="header">
             <h1>tracker</h1>
+        </div>
+        <div class="content">
+            * add content here *
         </div>
     </div>
 </body>
