--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,7 @@
 	<div class="sidebar">
         <div class="top">
             <div class="logo">
-                <i class="bx bxl-codepen"></i>
+                <img id="logo-mini" src="logo.png" alt="logo"/>
                 <span>DB App</span>
             </div>
             <i class ="bx bx-menu" id="btn"></i>
