--- a/dashboard.html
+++ b/dashboard.html
@@ -87,21 +87,21 @@
         <div class="statistics">
             <div class="total">
                 <div id="stats">
-                    <p class="stats-title"><b>Total Tested</b></p>
+                    <p class="stats-title"><b>Total Patients Tested</b></p>
                     <p class="number">890</p>
                 </div>
                 <i id="icon-stats" class="bx bxs-group"></i>
             </div>
             <div class="positive">
                 <div id="stats">
-                    <p class="stats-title"><b>Positive</b></p>
+                    <p class="stats-title"><b>Positive Patients Tested</b></p>
                     <p class="number">90</p>
                 </div>
                 <i id="icon-stats" class="bx bxs-user-plus"></i>
             </div>
             <div class="negative">
                 <div id="stats">
-                    <p class="stats-title"><b>Negative</b></p>
+                    <p class="stats-title"><b>Negative Patients Tested</b></p>
                     <p class="number">800</p>
                 </div>
                 <i id="icon-stats" class="bx bxs-user-minus"></i>
