--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -27,6 +27,9 @@
             
             <form name="read-user" action="read-user" method="post">
                 <div class="form-group">
+                    <input name="email" id="email-field" type="text" placeholder="Email"></input>
+                </div>
+                <div class="form-group">
                     <input name="password" id="password-field" type="password" placeholder="Enter New Password"></input>
                 </div>
                 <div class="form-group">
